test/parsing/shannon/invalidToken.good
invalidToken.chpl:3: syntax error: near 'one'
