test/parsing/shannon/invalidToken.chpl
var one: int = 1;

if (not one) {
   writeln("This shouldn't have printed.");
}

if (one != 1) {
   writeln("And this shouldn't print either.");
}
